# ros2-moveit-practice

./: .gitignore  .gitmodules  docker-compose.yml  turtlesim.md
aaron_ros2/: CMakeLists.txt  notes.md  package.xml  simple_publisher.cpp  simple_subscriber.cpp
aaron_ros2/include/: arm_constants_2.h  moveit_control _2.h  moveit_control_2.h
aaron_ros2/rover2026/: MJCF_template.xml  additional_params.md  robot.xml  rover2026URDF.urdf  urdf2mjcfROVER.py
aaron_ros2/rover_msgs/: package.xml
install/: local_setup.sh  setup.sh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.9
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.9
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.9  libmoveit_butterworth_filter.so.2.5.9  libmoveit_collision_detection.so.2.5.9  libmoveit_collision_detection_bullet.so.2.5.9  libmoveit_collision_detection_fcl.so.2.5.9  libmoveit_collision_distance_field.so.2.5.9  libmoveit_constraint_samplers.so.2.5.9  libmoveit_distance_field.so.2.5.9  libmoveit_dynamics_solver.so.2.5.9  libmoveit_exceptions.so.2.5.9  libmoveit_kinematic_constraints.so.2.5.9  libmoveit_kinematics_metrics.so.2.5.9  libmoveit_planning_interface.so.2.5.9  libmoveit_planning_request_adapter.so.2.5.9  libmoveit_planning_scene.so.2.5.9  libmoveit_robot_model.so.2.5.9  libmoveit_robot_state.so.2.5.9  libmoveit_robot_trajectory.so.2.5.9  libmoveit_test_utils.so.2.5.9  libmoveit_trajectory_processing.so.2.5.9  libmoveit_transforms.so.2.5.9
install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.9  libmotion_planning_pipeline_plugin.so.2.5.9  libmoveit_global_planner_component.so.2.5.9  libmoveit_hybrid_planning_manager.so.2.5.9  libmoveit_local_planner_component.so.2.5.9  libreplan_invalidated_trajectory_plugin.so.2.5.9  libsimple_sampler_plugin.so.2.5.9  (+1 more)
log/: latest_build
(+223 files in other folders)
