<?xml version="1.0"?>
<package format="3">
  <name>aaron_ros2</name>
  <version>0.0.0</version>
  <description>MoveIt control node for Rover 2026 arm</description>
  <maintainer email="rhimaaron@gmail.com">aaron</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- every package you #include needs a <depend> -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rover_msgs</depend>
  <depend>moveit_servo</depend>
<depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>